fix(ui): remove extra white space in header and footer on scroll

--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -6,6 +6,13 @@
  */
 
 /* Reset */
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-y: auto;
+}
+
 html,
 body,
 div,
